// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericRowRenderer #createGenericAuditRowRenderer renders correctly against snapshot 1`] = `
<span>
  <RowRendererContainer>
    <AuditdGenericDetails
      contextId="connected-to-timeline-test"
      data={
        Object {
          "_id": "27",
          "auditd": Object {
            "result": Array [
              "success",
            ],
            "session": Array [
              "246",
            ],
            "summary": Object {
              "actor": Object {
                "primary": Array [
                  "alice",
                ],
                "secondary": Array [
                  "alice",
                ],
              },
              "how": Array [
                "/usr/bin/wget",
              ],
              "object": Object {
                "primary": Array [
                  "192.168.216.34",
                ],
                "secondary": Array [
                  "80",
                ],
                "type": Array [
                  "socket",
                ],
              },
            },
          },
          "destination": Object {
            "ip": Array [
              "192.168.216.34",
            ],
            "port": Array [
              80,
            ],
          },
          "event": Object {
            "action": Array [
              "connected-to",
            ],
            "category": Array [
              "audit-rule",
            ],
            "module": Array [
              "auditd",
            ],
          },
          "host": Object {
            "id": Array [
              "7c21f5ed03b04d0299569d221fe18bbc",
            ],
            "ip": Array [
              "46.101.3.136",
              "10.16.0.5",
              "fe80::4066:42ff:fe19:b3b9",
            ],
            "name": Array [
              "zeek-london",
            ],
          },
          "process": Object {
            "executable": Array [
              "/usr/bin/wget",
            ],
            "name": Array [
              "wget",
            ],
            "pid": Array [
              1490,
            ],
            "ppid": Array [
              1476,
            ],
            "title": Array [
              "wget www.example.com",
            ],
          },
          "timestamp": "2019-03-22T19:13:11.026Z",
          "user": Object {
            "name": Array [
              "alice",
            ],
          },
        }
      }
      text="connected using"
      timelineId="timeline-test"
    />
  </RowRendererContainer>
</span>
`;

exports[`GenericRowRenderer #createGenericFileRowRenderer renders correctly against snapshot 1`] = `
<span>
  <RowRendererContainer>
    <AuditdGenericFileDetails
      contextId="opened-file-timeline-test"
      data={
        Object {
          "_id": "28",
          "auditd": Object {
            "result": Array [
              "success",
            ],
            "session": Array [
              "242",
            ],
            "summary": Object {
              "actor": Object {
                "primary": Array [
                  "unset",
                ],
                "secondary": Array [
                  "root",
                ],
              },
              "how": Array [
                "/lib/systemd/systemd-journald",
              ],
              "object": Object {
                "primary": Array [
                  "/proc/15990/attr/current",
                ],
                "type": Array [
                  "file",
                ],
              },
            },
          },
          "event": Object {
            "action": Array [
              "opened-file",
            ],
            "category": Array [
              "audit-rule",
            ],
            "module": Array [
              "auditd",
            ],
          },
          "file": Object {
            "device": Array [
              "00:00",
            ],
            "gid": Array [
              "0",
            ],
            "group": Array [
              "root",
            ],
            "inode": Array [
              "27672309",
            ],
            "mode": Array [
              "0666",
            ],
            "owner": Array [
              "root",
            ],
            "path": Array [
              "/proc/15990/attr/current",
            ],
            "uid": Array [
              "0",
            ],
          },
          "host": Object {
            "id": Array [
              "7c21f5ed03b04d0299569d221fe18bbc",
            ],
            "ip": Array [
              "46.101.3.136",
              "10.16.0.5",
              "fe80::4066:42ff:fe19:b3b9",
            ],
            "name": Array [
              "zeek-london",
            ],
          },
          "process": Object {
            "executable": Array [
              "/lib/systemd/systemd-journald",
            ],
            "name": Array [
              "systemd-journal",
            ],
            "pid": Array [
              27244,
            ],
            "ppid": Array [
              1,
            ],
            "title": Array [
              "/lib/systemd/systemd-journald",
            ],
            "working_directory": Array [
              "/",
            ],
          },
          "timestamp": "2019-03-26T22:12:18.609Z",
          "user": Object {
            "name": Array [
              "root",
            ],
          },
        }
      }
      fileIcon="document"
      text="opened file using"
      timelineId="timeline-test"
    />
  </RowRendererContainer>
</span>
`;
